# ddpg_demo

src/ddpg_control/: CMakeLists.txt  package.xml
src/ddpg_control/config/: param.yaml
src/ddpg_control/include/ddpg_control/: actor_network.h  critic_network.h  ddpg_agent.h  replay_buffer.h  utils.h
src/ddpg_control/launch/: ddpg_train.launch
src/ddpg_control/src/: actor_network.cpp  critic_network.cpp  ddpg_agent.cpp  replay_buffer.cpp  train_node.cpp
