<package format="2">
  <name>ddpg_control</name>
  <version>0.1.0</version>
  <description>DDPG reinforcement learning control for UAV in Gazebo</description>
  <maintainer email="zhouzhiwei@zju.ecu.cn">Your Name</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>tf2_ros</depend>
</package>